Updates to generalise this package
* Rename some general packages to be less Archipelago specific
- Remove SOA records from R53 DNS
+ put AWS stuff behind a tag

--- a/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
@@ -57,15 +57,15 @@
 
 
 
-- name: aquarionics.com. - SOA
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aquarionics.com"
-      record: "aquarionics.com."
-      type: "SOA"
-      ttl: "900"
-      value: 'ns-1103.awsdns-09.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
+#- name: aquarionics.com. - SOA
+#  route53:
+#      overwrite: true
+#      command: "create"
+#      zone: "aquarionics.com"
+#      record: "aquarionics.com."
+#      type: "SOA"
+#      ttl: "900"
+#      value: 'ns-1103.awsdns-09.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
 
 
