--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -12,7 +12,7 @@
   become: yes
   roles:
     - archipelago-packages
-    - archipelago-network
+    - water-gkhs-network
     - water-gkhs-users
     - larpme
     - aws-aqcom-dns
@@ -29,6 +29,41 @@
   become: yes
   roles:
     - millpond-packages
-    - archipelago-network
+    - water-gkhs-network
     - water-gkhs-users
+    - millpond-filebot
+    #- millpond-kiosk
 
+
+- hosts: millpond.water.gkhs.net
+  become: yes
+  tasks:
+    - name: installing repo for Java 8 in Ubuntu
+      apt_repository: repo='ppa:openjdk-r/ppa'
+  roles:
+    - role: geerlingguy.java
+      when: "ansible_os_family == 'Debian'"
+      java_packages:
+        - openjdk-8-jdk
+
+- hosts: millpond.water.gkhs.net
+  become: yes
+  roles:
+    - role: elboletaire.transmission
+      become: yes
+      transmission_user: "{{ millpond_transmission_user }}"
+      transmission_password: "{{ millpond_transmission_pass }}"
+      transmission_rpc_auth_required: true
+      transmission_rpc_whitelist_enabled: true
+      transmission_umask: "002"
+      transmission_rpc_whitelist: "127.0.0.1,192.168.100.*"
+      transmission_incomplete_dir: /var/lib/plexmediaserver/Torrential/Progress
+      transmission_incomplete_dir_enabled: true
+      transmission_download_dir: /var/lib/plexmediaserver/Torrential/Completed
+    - role: millpond-flexget
+  tasks:
+   # Clear up Transmission permissions
+   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Progress
+   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Complete
+   - user: name=debian-tranmission groups=plex append=yes
+   - user: name=plex groups=debian-tranmission append=yes
