--- a/ansible/roles/millpond-flexget/tasks/main.yml
+++ b/ansible/roles/millpond-flexget/tasks/main.yml
@@ -3,6 +3,6 @@
   become: yes
   become_user: plex
 
-- cron: name="flexget" weekday="2" minute=0 hour=12
-        user="plex" job=".virtualenvs/flexget/bin/python .virtualenvs/flexget/bin/flexget --cron execute"
+- cron: name="flexget" minute="16,46"
+        user="plex" job="/var/lib/plexmediaserver/.virtualenvs/flexget/bin/python /var/lib/plexmediaserver/.virtualenvs/flexget/bin/flexget --cron execute"
         cron_file=flexget
