Support plexpass login for plex role

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -31,6 +31,7 @@
     - millpond-packages
     - water-gkhs-network
     - water-gkhs-users
+    - plex
     - millpond-filebot
     #- millpond-kiosk
 
