Remove double-task in single playbook

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -49,6 +49,9 @@
   tasks:
     - name: installing repo for Java 8 in Ubuntu
       apt_repository: repo='ppa:openjdk-r/ppa'
+
+- hosts: millpond.water.gkhs.net
+  become: yes
   roles:
     - role: geerlingguy.java
       java_packages:
