Split playbooks by host

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,73 +6,6 @@
    - water-gkhs-packages
    - water-gkhs-update
 
-- hosts: archipelago.water.gkhs.net
-  vars:
-    hostname: archipelago.water.gkhs.net
-  become: yes
-  roles:
-    - archipelago-packages
-    - water-gkhs-network
-    - water-gkhs-users
-    - larpme
-    - aws-aqcom-dns
-    - ansible-docker
-  tasks:
-    - user: name={{ item }} groups=docker append=yes
-      with_items:
-       - aquarion
-       - ccooke
+- include: playbook-archipelago.yml
 
-- hosts: millpond.water.gkhs.net
-  vars:
-    hostname: millpond.water.gkhs.net
-  become: yes
-  roles:
-    - millpond-packages
-    - water-gkhs-network
-    - water-gkhs-users
-    - plex
-    - millpond-filebot
-    - retort
-    #- millpond-kiosk
-
-
-
-- hosts: millpond.water.gkhs.net
-  tasks:
-    - name: "Transmission: check for installation"
-      register: transmission_bin
-      stat: path="/usr/bin/transmission-cli"
-
-
-- hosts: millpond.water.gkhs.net
-  become: yes
-  tasks:
-    - name: installing repo for Java 8 in Ubuntu
-      apt_repository: repo='ppa:openjdk-r/ppa'
-
-- hosts: millpond.water.gkhs.net
-  become: yes
-  roles:
-    - role: geerlingguy.java
-      java_packages:
-        - openjdk-8-jdk
-    - role: elboletaire.transmission
-      when: not transmission_bin.stat.exists
-      become: yes
-      transmission_user: "{{ millpond_transmission_user }}"
-      transmission_password: "{{ millpond_transmission_pass }}"
-      transmission_rpc_auth_required: true
-      transmission_rpc_whitelist_enabled: true
-      transmission_umask: "002"
-      transmission_rpc_whitelist: "127.0.0.1,192.168.100.*"
-      transmission_incomplete_dir: /var/lib/plexmediaserver/Torrential/Progress
-      transmission_incomplete_dir_enabled: true
-      transmission_download_dir: /var/lib/plexmediaserver/Torrential/Completed
-    - role: millpond-flexget
-  tasks:
-   # Clear up Transmission permissions
-   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Progress
-   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Complete
-   - user: name=debian-tranmission groups=plex append=yes
-   - user: name=plex groups=debian-tranmission append=yes
+- include: playbook-millpond.yml
