move nginx install from generic modules to generic nginx

--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: install nginx
+  apt: pkg=nginx state=installed
+
 - name: configure nginx sites as available
   template: src={{item}} dest=/etc/nginx/sites-available/{{ item | basename }}
   with_fileglob:
