Fix ssl caching issue with nginx config, add some more ssl

--- a/ansible/host_vars/_example.yml
+++ b/ansible/host_vars/_example.yml
@@ -4,3 +4,5 @@ flexget_tasks:
 
 millpond_transmission_user: something
 millpond_transmission_pass: redacted
+
+letsencrypt_dir: /etc/letsencrypt/live/istic.net
