--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -10,6 +10,7 @@
     - libssl-dev
     - apt-transport-https
     - ca-certificates
+    - etckeeper
 
 - name: Install Utility Packages
   apt: pkg={{ item }} state=installed
