--- a/ansible/playbook-archipelago.yml
+++ b/ansible/playbook-archipelago.yml
@@ -14,6 +14,7 @@
     - ansible-docker
     - archipelago-nginx
     - pablocrivella.heroku-toolbelt
+    - { role: water-gkhs-mysql-backup, tags: mysql }
   tasks:
     - user: name={{ item }} groups=docker append=yes
       with_items:
