Remove heroku toolbelt until we can update the playbook

--- a/ansible/playbook-archipelago.yml
+++ b/ansible/playbook-archipelago.yml
@@ -13,7 +13,7 @@
     - aws-aqcom-dns
     - ansible-docker
     - archipelago-nginx
-    - pablocrivella.heroku-toolbelt
+    #- pablocrivella.heroku-toolbelt # This needs to suck less
     - { role: water-gkhs-mysql-backup, tags: mysql }
   tasks:
     - user: name={{ item }} groups=docker append=yes
