--- a/ansible/playbook-archipelago.yml
+++ b/ansible/playbook-archipelago.yml
@@ -14,6 +14,7 @@
     - ansible-docker
     - archipelago-nginx
     - { role: archipelago-nginx, tags: nginx }
+    - { role: torian.filebeat, tags: logging }
     #- pablocrivella.heroku-toolbelt # This needs to suck less
     - { role: water-gkhs-mysql-backup, tags: mysql }
   tasks:
