--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+
+- name: Package list update
+  apt: update_cache=yes cache_valid_time=21600
+
 - name: Install System Packages
   apt: pkg={{ item }} state=installed
   with_items:
