Fix some plex issues

--- a/ansible/roles/plex/tasks/main.yml
+++ b/ansible/roles/plex/tasks/main.yml
@@ -6,13 +6,10 @@
   command: /root/plexupdate/plexupdate.sh -p -a chdir=/tmp creates=/etc/init/plexmediaserver.conf
 
 - name: Schedule cron for plex update
-  cron: name="plexupdate" cron_file=plexupdate user=root hour=4 job="cd /tmp;/root/plexupdate/plexupdate.sh"
+  cron: name="plexupdate" cron_file=plexupdate user=root hour=4 minute=47 job="cd /tmp;/root/plexupdate/plexupdate.sh"
 
 - name: Set public plexupdate preferences
   template: src=plexupdaterc dest=/root/.plexupdate
 
 - name: Mount library directory
-  mount: name=/var/lib/plexmediaserver src=/dev/sdc1 state=mounted fstype=ext4
-
-- name: Mount other library directory
-  mount: name=/var/lib/plexmediaserver/SpareDrive  src=/dev/sdb1 state=mounted fstype=ext4
+  mount: name=/var/lib/plexmediaserver src=/dev/mapper/oceanus--vg-media state=mounted fstype=ext4
