SSL & Email settings for new PDForums Discourse

--- a/ansible/playbook-archipelago.yml
+++ b/ansible/playbook-archipelago.yml
@@ -9,7 +9,7 @@
     - water-gkhs-network
     - water-gkhs-users
     - archipelago-users
-    - larpme
+    - { role: larpme, tags: larpme }
     - aws-aqcom-dns
     - ansible-docker
     - archipelago-nginx
