--- a/ansible/roles/larpme/tasks/dns.yml
+++ b/ansible/roles/larpme/tasks/dns.yml
@@ -144,15 +144,15 @@
     ttl: 300
     value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCj7W/8a+Nl3ucgDgHCU1ROWW1lzktsq6fq/YQXSbIpBbQX+zpTmEWUE7baIrbEBXggEF15RwYknSEN33W1kGRYqc1uAeoaHQolg+q++2UliaT1p1AXJdK4hphEvh62k6FZ6muu8XvxqDzwnao6B8KLD54E7+PIu4ErMzciLXLM6wIDAQAB"'
 
-- name: Larpme DNS - PDForums SPF
-  route53:    
-    overwrite: true
-    command: "create"
-    zone: "larp.me"
-    record: "postmark.pdforums.larp.me"
-    value: '"v=spf1 a mx include:spf.mtasv.net ~all"'
-    type: "SPF"
-    ttl: 300
+#- name: Larpme DNS - PDForums SPF
+#  route53:    
+#    overwrite: true
+#    command: "create"
+#    zone: "larp.me"
+#    record: "postmark.pdforums.larp.me"
+#    value: '"v=spf1 a mx include:spf.mtasv.net ~all"'
+#    type: "SPF"
+#    ttl: 300
 
 - name: Larpme DNS - PDForums DMARC
   route53:    
