--- a/ansible/playbook-archipelago.yml
+++ b/ansible/playbook-archipelago.yml
@@ -12,12 +12,11 @@
     - { role: larpme, tags: larpme }
     - aws-aqcom-dns
     - ansible-docker
-    - archipelago-nginx
     - { role: archipelago-nginx, tags: nginx }
     - { role: torian.filebeat, tags: logging }
     #- pablocrivella.heroku-toolbelt # This needs to suck less
     - { role: water-gkhs-mysql-backup, tags: mysql }
-    - water-gkhs-nginx-errors
+    - { role: water-gkhs-nginx-errors, tags: nginx }
   tasks:
     - user: name={{ item }} groups=docker append=yes
       with_items:
