--- a/ansible/roles/larpme/tasks/dns.yml
+++ b/ansible/roles/larpme/tasks/dns.yml
@@ -176,3 +176,13 @@
     ttl: 300
 
 
+- name: Larpme DNS - PDForums A
+  route53:    
+    overwrite: true
+    command: "create"
+    zone: "larp.me"
+    record: "old.pdforums.larp.me"
+    value: '138.201.60.152'
+    type: "A"
+    ttl: 300
+
