--- a/ansible/roles/larpme/tasks/dns.yml
+++ b/ansible/roles/larpme/tasks/dns.yml
@@ -54,7 +54,7 @@
       ttl: "300"
       value: '"v=spf1 a mx include:smtp1.uservoice.com include:_spf.google.com include:spf.mtasv.net ~all"'
 
-- name: Larpme DNS - PDForums DKIM
+- name: Larpme DNS - DKIM
   route53:
     overwrite: true
     command: "create"
@@ -133,56 +133,3 @@
       type: "A"
       ttl: "300"
       value: '138.201.60.152'
-
-- name: Larpme DNS - PDForums DKIM
-  route53:
-    overwrite: true
-    command: "create"
-    zone: "larp.me"
-    record: "20170201153337pm._domainkey.pdforums.larp.me"
-    type: "TXT"
-    ttl: 300
-    value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCj7W/8a+Nl3ucgDgHCU1ROWW1lzktsq6fq/YQXSbIpBbQX+zpTmEWUE7baIrbEBXggEF15RwYknSEN33W1kGRYqc1uAeoaHQolg+q++2UliaT1p1AXJdK4hphEvh62k6FZ6muu8XvxqDzwnao6B8KLD54E7+PIu4ErMzciLXLM6wIDAQAB"'
-
-#- name: Larpme DNS - PDForums SPF
-#  route53:    
-#    overwrite: true
-#    command: "create"
-#    zone: "larp.me"
-#    record: "postmark.pdforums.larp.me"
-#    value: '"v=spf1 a mx include:spf.mtasv.net ~all"'
-#    type: "SPF"
-#    ttl: 300
-
-- name: Larpme DNS - PDForums DMARC
-  route53:    
-    overwrite: true
-    command: "create"
-    zone: "larp.me"
-    record: "postmark.pdforums.larp.me"
-    value: 'pm.mtasv.net'
-    type: "CNAME"
-    ttl: 300
-
-
-- name: Larpme DNS - PDForums A
-  route53:    
-    overwrite: true
-    command: "create"
-    zone: "larp.me"
-    record: "pdforums.larp.me"
-    value: '138.201.60.152'
-    type: "A"
-    ttl: 300
-
-
-- name: Larpme DNS - PDForums A
-  route53:    
-    overwrite: true
-    command: "create"
-    zone: "larp.me"
-    record: "old.pdforums.larp.me"
-    value: '138.201.60.152'
-    type: "A"
-    ttl: 300
-
