--- a/ansible/roles/aws-aqcom-dns/tasks/monthlymoon.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/monthlymoon.yml
@@ -66,11 +66,5 @@
       record: "themonthlymoon.com."
       type: "MX"
       ttl: "300"
-      value: [
-        '5 ALT1.ASPMX.L.GOOGLE.COM.',
-        '5 ALT2.ASPMX.L.GOOGLE.COM.',
-        '1 ASPMX.L.GOOGLE.COM.',
-        '10 ASPMX2.GOOGLEMAIL.COM.',
-        '10 ASPMX3.GOOGLEMAIL.COM.'
-        ]
+      value: '5 ALT1.ASPMX.L.GOOGLE.COM.,5 ALT2.ASPMX.L.GOOGLE.COM.,1 ASPMX.L.GOOGLE.COM.,10 ASPMX2.GOOGLEMAIL.COM.,10 ASPMX3.GOOGLEMAIL.COM.'
 
