--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,7 @@
 - src: https://github.com/cspicer/ansible-docker
-- src: https://github.com/cspicer/ansible-apt
+#- src: https://github.com/cspicer/ansible-apt
+- src: https://github.com/Fsero/ansible-apt.git
+  version: removing_warning_in_ansible_2
 - src: geerlingguy.java
 - src: elboletaire.transmission
 - src: pablocrivella.heroku-toolbelt
