--- a/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
@@ -71,18 +71,15 @@
       value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCGF2/JFx7pvFw7RU1wXzqtMohMaSZTEbeLscHSrvzrKKtH2M1zTY8YwIZpjFCjbCbQ2aW28bLzzhd2e1klZorwWV++CYoXnnGgVtz1241ToVPgKyKepmBn6E+3DaJZWsj17jINgEkxYoZ3hvp34y+NSFxlMR4bD9V3EetoxUAYgQIDAQAB"'
 
 
-
 - name: lists.aqxs.net. - MX
   route53:
       overwrite: true
-      command: "create"
+      command: "delete"
       zone: "aqxs.net"
       record: "lists.aqxs.net."
       type: "MX"
       ttl: "3600"
       value: '10 cenote.gkhs.net.aqxs.net.'
-
-
 
 - name: pmbounce.aqxs.net. - CNAME
   route53:
