--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -8,7 +8,7 @@
       record: "foip.me."
       type: "A"
       ttl: "86400"
-      value: ['67.199.248.13', '67.199.248.12']
+      value: '67.199.248.13,67.199.248.12'
 
 
 
