--- a/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
@@ -20,7 +20,7 @@
       record: "aqxs.net."
       type: "NS"
       ttl: "172800"
-      value: ['ns-1408.awsdns-48.org.','ns-685.awsdns-21.net.','ns-40.awsdns-05.com.','ns-1866.awsdns-41.co.uk.']
+      value: ns-1408.awsdns-48.org., ns-685.awsdns-21.net., ns-40.awsdns-05.com., ns-1866.awsdns-41.co.uk.
 
 
 
