--- a/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
@@ -19,7 +19,7 @@
       record: "camlarp.co.uk."
       type: "NS"
       ttl: "172800"
-      value: ['ns-422.awsdns-52.com.','ns-617.awsdns-13.net.','ns-1181.awsdns-19.org.','ns-1809.awsdns-34.co.uk.']
+      value: ns-422.awsdns-52.com,ns-617.awsdns-13.net,ns-1181.awsdns-19.org,ns-1809.awsdns-34.co.uk
 
 
 #- name: camlarp.co.uk. - SOA
