--- a/ansible/roles/aws-aqcom-dns/tasks/monthlymoon.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/monthlymoon.yml
@@ -23,7 +23,7 @@
       record: "themonthlymoon.com."
       type: "NS"
       ttl: "172800"
-      value: ['ns-727.awsdns-26.net.','ns-1489.awsdns-58.org.','ns-1.awsdns-00.com.','s-1630.awsdns-11.co.uk.']
+      value: ns-727.awsdns-26.net., ns-1489.awsdns-58.org., ns-1.awsdns-00.com., s-1630.awsdns-11.co.uk.
 
 #- name: themonthlymoon.com. - SOA
 #  route53:
