--- a/ansible/roles/larpme/tasks/dns.yml
+++ b/ansible/roles/larpme/tasks/dns.yml
@@ -26,12 +26,7 @@
       record: "larp.me"
       type: "NS"
       ttl: "172800"
-      value: [
-        'ns-377.awsdns-47.com.',
-        'ns-1181.awsdns-19.org.',
-        'ns-1976.awsdns-55.co.uk.',
-        'ns-527.awsdns-01.net.'
-        ]
+      value: ns-377.awsdns-47.com., ns-1181.awsdns-19.org., ns-1976.awsdns-55.co.uk., ns-527.awsdns-01.net.
 
 
 #- name: Larpme DNS - SOA
