--- a/ansible/roles/water-gkhs-update/tasks/main.yml
+++ b/ansible/roles/water-gkhs-update/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
 
 - name: Safe Upgrade
-  apt: update_cache=yes cache_valid_time=21600 upgrade=safe
+  apt: update_cache=yes cache_valid_time=21600 upgrade=safe autoremove=yes
+
+- name: Safe Remove
+  apt: autoremove=yes
