--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -15,6 +15,7 @@
     - apt-transport-https
     - ca-certificates
     - etckeeper
+    - fail2ban
 
 - name: Install Utility Packages
   apt: pkg={{ item }} state=installed
